[RLS] Do not apply scroll when clipping fixed-position visual rects

With root layer scrolling the layout view clips and we need to ensure
the clip occurs in the correct (un)scrolled space for fixed position.
This patch changes the fixed position case: we stop applying the layout
view scroll, clip, and then do not counter-scroll. There is a similar
codepath for the !RLS case which has not been changed in this patch.

Here's a summarized description of where scroll offsets apply:
1) MapToVisualRectInAncestorSpaceInternal calls MapVisualRectToContainer
2) MapVisualRectToContainer calls MapContentsRectToBoxSpace
3) MapContentsRectToBoxSpace applies the layout view scroll offset
4) MapContentsRectToBoxSpace clips
5) MapToVisualRectInAncestorSpaceInternal un-applies the scroll offset

This patch removes #3 and #5 for fixed position.

Bug: 831380

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3437d3933155960abfcbebd437ddb6cb606ea37e
Reviewed-on: https://chromium-review.googlesource.com/1025329
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553455}
Former-commit-id: e931d2aecb4d72946962e57e7e1586668071b504